fix: develop 브랜치 빌드 오류 수정
- 중복 파일(* 2.java) 삭제
- 누락된 Quiz DTO 4개 생성 (QuizGenerateRequest, QuizSubmitRequest, QuizGenerateResponse, QuizSubmitResponse, QuizHistoryResponse)
- Course.platform 필드 String → Platform enum 변경 반영
  - CourseResponse, NoteDetailResponse, DashboardService, CourseService, TestCourseDataInitializer, CourseRepository 수정
- Platform enum에 ALLGO, KURIQ_TEST 추가